syntax = "proto3";

option csharp_namespace = "Chronos.Server";

import "google/protobuf/any.proto";

package GrpcJobService;

message ResponseDto {
    string message = 1;
    google.protobuf.Any data = 2;
    bool success = 3;
}

message AddRequest {
    string name = 1;
    Dictionary parameters = 2;
    google.protobuf.Any jobType = 3;
}

message DeleteRequest {
    string name = 1;
}

message DeleteJobScheduleRequest{
    string name = 1;
}

message ScheduleRequest{
    string jobName = 1;
    string cronExpression = 2;
}

message Empty {}

message Pair {
   string key = 1;
   string value = 2;
}

message Dictionary {
   repeated Pair pairs = 1;
}

service GrpcJobService {
    rpc AddAsync (AddRequest) returns (ResponseDto);
    rpc DeleteAsync (DeleteRequest) returns (ResponseDto);
    rpc DeleteJobScheduleAsync (DeleteJobScheduleRequest) returns (ResponseDto);
    rpc GetAllAsync (Empty) returns (ResponseDto);
    rpc GetJobSchedulesAsync (Empty) returns (ResponseDto);
    rpc ScheduleAsync (ScheduleRequest) returns (ResponseDto);
}